syntax = "proto3";

package myservice;

option go_package = "plakar-rclone-plugin/proto";

service MyService {
  rpc Importer (KeyValueMap) returns (Response);
  rpc Exporter (KeyValueMap) returns (Response);
  rpc Config (ConfigRequest) returns (stream CLIMessage);
  rpc ConfigStream (stream CLIMessage) returns (stream CLIMessage);
}

message KeyValueMap {
  map<string, string> data = 1;
}

message ConfigRequest {
  string type = 1;
}

message CLIMessage {
  string content = 1;
}

message Response {
  string status = 1;
}
